@@ -26,6 +26,11 @@
                 <version>3.15.0</version>
                 <configuration>
                     <enablePreview>true</enablePreview>
+                    <compilerArgs>
+                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=newtonparticlesfx</arg>
+                        <arg>--add-exports=java.base/jdk.internal.value=newtonparticlesfx</arg>
+                        <arg>--add-exports=java.base/jdk.internal.misc=newtonparticlesfx</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -34,6 +39,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>newtonparticlesfx/com.codesimcoe.newtonparticlesfx.NewtonParticlesFxMain</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
